Revert "fix landing page party shapes overflow"
This reverts commit 22b76721daf65cdbb228b952b5d29fb2e0d29f45.

--- a/assets/css/landingPageBodyMain.css
+++ b/assets/css/landingPageBodyMain.css
@@ -1,33 +1,17 @@
-html {
-    margin: 0;
-    height: 100%;
-    width: 100%;
-    /* max-width: 1080px; */
-}
-
 body {
     margin: 0;
     height: 100%;
-    width: 100%;
     overflow-x: hidden;
-    display: flex;
-    justify-content: flex-start;
-    flex-direction: column;
-    /* align-items: center; */
 
-    
 
 
 }
 #main {
-    max-width: 100%;
+    width: 100%;
     /* width: 100vw ; */
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: start;
     align-items: center;
-    /* max-width: 1080px; */
-    /* margin-left: auto; */
-    /* margin-right: auto; */
 
 }
